# ot-ns

./: .codecov.yml  .dockerignore  .gitignore  .gitmodules  .golangci.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  go.mod
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  develop.yml  docker.yml  lint.yml  stress.yml  test.yml
cli/: CmdRunner.go  README.md  ast.go  cli_test.go  cmd_runner.go  help.go  runcli.go  runner.go  types.go  yaml_test.go
cli/runcli/: runcli.go
cmd/otns/: otns.go
cmd/otns-otci-proxy/: otns-otci-proxy.go
cmd/otns-real-proxy/: otns-real-proxy.go
cmd/otns-replay/: grpc_service.go  otns_replay.go
cmd/real/otns-silk-proxy/: otns-silk-proxy.go
config/: office_50.yaml
dispatcher/: FailureCtrl.go  FailureCtrl_test.go  Node.go  alarm_mgr.go  coaps.go  dispatcher.go  dispatcher_config.go  event.go  failure_ctrl.go  failure_ctrl_test.go  radiomodel.go  radiomodelInterfereAll.go  rloc16_map.go  rloc16_map_test.go  send_queue.go  send_queue_test.go  stats.go  types.go  visualization_options.go
dissectpkt/: dissectpkt.go
dissectpkt/wpan/: wpan.go
energy/: core.go  node.go  types.go
etc/cli-scripts/: ot-script-example.cli  ot-script-example.yaml
etc/docker/environment/: Dockerfile
etc/docker/playground/: Dockerfile  run-playground.sh
etc/mesh-topologies/: office_200.yaml
etc/ot-registrar/: credentials_masa.p12  credentials_registrar.p12
event/: event.go  event_test.go
examples/otbr-and-matter/: Dockerfile  README.md  otns-automation.py  run-docker.sh
logger/: logger.go  logger_test.go  nodelogger.go  parse.go  parse_test.go
ot-rfsim/: CMakeLists.txt  README.md
ot-rfsim/etc/: ot-mbedtls-settings.patch  v11.patch  v12.patch  v13.patch
ot-rfsim/ot-versions/: README.md  ot-br.sh
ot-rfsim/script/: bootstrap  build  build_all  build_br  build_br_ccm  build_ccm  build_latest  build_otbr  build_posix  build_rcp  build_v11  build_v12  build_v13  build_v131  make-pretty  test
ot-rfsim/src/: CMakeLists.txt  alarm.c  ble.c  code_utils.h  crypto.c  diag.c  dso_transport.c  entropy.c  event-sim.c  event-sim.h  flash.c  infra_if.c  logging.c  misc.c  openthread-core-rfsim-config-check.h  openthread-core-rfsim-config.h  platform-rfsim.c  platform-rfsim.cpp  platform-rfsim.h  radio-parameters.h  radio.c  radio.h  system.c  trel.c  uart.c
otns_main/: otns_main.go
otnstester/: OtnsTest.go
otnstester/tests/: consts.go  otns_basic_test.go  otns_many_children_test.go  otns_one_router_test.go
otoutfilter/: OTOutFilter.go  OTOutFilter_test.go
pcap/: PcapFile.go  PcapFile_test.go  PcapTapFile.go
prng/: prng.go
progctx/: progctx.go  progctx_test.go
pylibs/: node_clicker.py  setup.py  test_mesh_topology.yaml
pylibs/case_studies/: coap_observe.py  csl_wakeup_crowding.py  deprecated_prefix.py  fast_key_rotation.py  forced_key_rotation.py  fragment_reassembly.py  large_diagnostics.py  office_floor.py  office_floor_multi_runs.py  partial_dataset.py  srp_dataset_types.py  srp_lease_time.py  srp_remove_service.py  srp_reregistration.py  srp_reregistration_2.py  srp_reregistration_3.py  traffic_patterns.py
pylibs/doc/: Makefile  conf.py  index.rst
pylibs/doc/otns/: cli.rst  errors.rst
pylibs/examples/: diagnostics.py  dns_client.py  farm.py  form_partition.py  hidden_nodes_test.py  interactive_cli.py  interactive_cli_threaded.py  many_hops_network.py  multiple_channels.py  ping.py  power_cycle.py  rekey.py  simple.py  srp.py  tcp.py
pylibs/otns/: consts.py  defaults.py  errors.py
pylibs/otns/cli/: OTNS.py  __init__.py  errors.py
pylibs/stress_tests/: .mleid_connectivity.py.un~  128_children.py  BaseStressTest.py  README.md  StressTestResult.py  commissioning-many.py  commissioning.py  config.py  errors.py  external_routes.py  gen_stress_tests_report.py  large_network_forming.py  large_network_merge.py  long_duration.py  max_children.py  mleid_connectivity.py  mleid_connectivity.py~  multicast_coaps.py  multicast_performance.py  network_forming.py  network_latency.py  network_limits.py  otns_perf.py  otns_performance.py  partition_merge.py  ping_latency.py  run_stress_suite.py  service_connectivity.py  stess_report_bot.py  very_large_network_forming.py
pylibs/unittests/: OTNSTestCase.py  requirements.txt  test_basic.py  test_basic_raw.py  test_border_router.py  test_ccm_commissioning.py  test_commissioning.py  test_consts.py  test_csl.py  test_exe_versions.py  test_ping.py  test_radiomodels.py  test_real.py  test_realtime_rcp.py  test_signals.py  test_sim_hosts.py  test_topologies.py
radiomodel/: ber_model.go  fading_model.go  model_params.go  pathloss_model.go  radiomodel.go  radiomodelIdeal.go  radiomodelInterfereAll.go  radiomodelMutualInterference.go  radionode.go  utils.go
script/: bootstrap  check-pretty  common.sh  compile-proto  docker-build  install  install-deps  install-nodes  install-otns  install-test-deps  make-pretty  pack-web  run-docker-pack-web  setup-dev  test  utils.sh
simulation/: kpi.go  kpi_data.go  kpi_test.go  node.go  node_config.go  node_config_test.go  nodescript_parser.go  sim_hosts.go  simulation.go  simulationController.go  simulation_config.go  simulation_io.go  types.go  utils.go  utils_test.go
threadconst/: threadconst.go
types/: Event.go  RadioNode.go  event.go  event_test.go  log.go  node_config.go  ot_error.go  ot_types.go  rfsim_types.go  types.go
visualize/: SimulationController.go  nopVisualizer.go  types.go
visualize/grpc/: grpcField.go  grpcNode.go  grpcServer.go  grpcServer_test.go  grpcSimCtrl.go  grpcStream.go  grpcVisualizer.go
visualize/multi/: multiVisualizer.go
visualize/statslog/: statslogVisualizer.go
web/: web.go  web_test.go
web/site/: bindata.go  bindata_test.go  pack-bindata.sh  package-lock.json  package.json  site.go  site_test.go  webpack.config.js
(+32 files in other folders)
